# test_repo

./: README.md  py_test2.py  python_test.py
TEMP_Lecture02/: lecture.ipynb  savedata.txt  supplemental_exercises.ipynb
TEMP_Lecture02/pybryt-references/: exercise-2_13.pkl  exercise-2_131.pkl  exercise-2_21.pkl  exercise-2_22.pkl  exercise-2_3.pkl  exercise-2_4.pkl  exercise-2_6.pkl  exercise-2_7.pkl  exercise-2_9.pkl
TEMP_Lecture04/: embed_test.py  lecture.ipynb
TEMP_Lecture04/files/: .coverage  clear_naming.ipynb  dry.py  embed_demo.py  kiss.py  to_debug_ywx.py
TEMP_Lecture04/files/grouped_tests/: test_groups.py
TEMP_Lecture04/files/l4mod/: l4mod.py  l4mod_test.py
TEMP_Lecture04/files/l4mod/docs/: conf.py  index.rst
TEMP_Lecture04/files/l4mod/docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
TEMP_Lecture05/: arithmetic.py  fix_script.py  plot_scripts.py  rot13_module.py  rot13_script.py  test_test_package.py
TEMP_Lecture05/exampleproject/: LICENSE  README.md  pyproject.toml
TEMP_Lecture05/exampleproject/test_package/: __init__.py
TEMP_Lecture05/exampleproject/test_package.egg-info/: PKG-INFO  SOURCES.txt
TEMP_Lecture05/exampleproject/test_package/funcs/: complex_squre_root.py
TEMP_Lecture05/exampleproject/test_package/linear_algebra/: array_operations.py  matrix_operations.py
TEMP_Lecture05/exampleproject/test_package/statistics/: statistics.py
TEMP_Lecture05/exampleproject/test_package/tests/: test_test_package.py
TEMP_Lecture06/: lecture.ipynb
TEMP_Lecture07/: floating-point-arithmetic.ipynb
(+2 files in other folders)
