[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_package"
version = "0.1.0"
description = "A brief version of numerical package"
readme = "README.md"  # 自动读取 README 文件内容
requires-python = ">=3.7"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.21",
]
